# FreeTakServer

./: .Dockerignore  .flake8  .gitignore  CoT.py  CoTtest.py  DimensionTypes.py  Dockerfile  EntityTypes.py  Event.py  Event2.py  FreeTACServer.py  FreeTAKServer.py  FreeTAKServerV0.6  IdentityTypes.py  LICENSE  MANIFEST.in  Mission.py  Precisionlocation.py  README.md  README_DOCKER.md  REST_APIDoc.md  REST_API_InternalDoc.md  SECURITY.md  ServerExample.py  TAK.db  TAKFreeServer.py  TAKlib.py  __chat.py  __serverdestination.py  chatgrp.py  color.py  compose.yaml  contact.py  detail.py  docker-run.sh  gitDigitalPy.Dockerfile  link.py  point.py  pyproject.toml  pytest.ini  (+11 more)
.github/: FUNDING.yml
.github/workflows/: Upload-Python-Package-To-Dev.yml  containerize-on-tag.yml  docker.yml  pub-server-rebuild.yml  publish-python-package.yml  python-dev-publish.yml  python-package.yml  python-publish-to-dev.yml  python-publish.yml  python-test.yml  simple_dev_upload.yml  wemake.yml
FreeTAKServer/: .gitignore  README.md  __init__.py  test_nothing.py
FreeTAKServer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FreeTAKServer/controllers/: -- SQLite.sql  ActiveThreadsController.py  AddDataToCoTList.py  ApplyFullJsonController.py  AsciiController.py  BasicModelInstantiate.py  ClientInformationController.py  ClientInformationQueueController.py  ClientReceptionHandler.py  ClientSendHandeler.py  ClientSendHandler.py  CoTTypeController.py  CreateLoggerController.py  CreateStartupFilesController.py  DataPackageServer.py  DataQueueController.py  ExCheckController.py  FTS.py  FederatedCoTController.py  FilterGroupController.py  HealthCheckController.py  JsonController.py  MainSocketController.py  MesageTypeController.py  MessageTypeController.py  Orchestrator.py  ProcessDataController.py  ReceiveConnections.py  ReceiveConnectionsProcessController.py  RecieveConnections.py  RecieveConnectionsProcessController.py  RestAPI.py  SSLSocketController.py  SendClientData.py  SendDataController.py  SendDropPointController.py  SendEmergencyController.py  SendGeoChatController.py  SendHealthCheckController.py  SendInvalidCoTController.py  (+11 more)
FreeTAKServer/model/: ActiveThreads.py  ClientInformation.py  ClientInformationQueue.py  Connection.py  DataQueue.py  DestList.py  FilterGroup.py  RawCoT.py  RawConnectionInformation.py  ReceiveConnectionsProcess.py  SSLConnection.py  SimpleClient.py  SimpleClientVariables.py  TCPConnection.py  User.py  clients.py  detailObject.py  federate.py  socketInformation.py  testobj.py
FreeTAKServer/views/: CLI.py
Old/: CoT.py  FreeTACServer.py  FreeTAKServer.py  ServerExample.py  TAKFreeServer.py  TAKlib.py  constant.py  xmlfile.xml  xmlsplitter.py
Old/Model/: Event.py  Precisionlocation.py  __chat.py  color.py  detail.py  point.py  track.py
Old/ModelWithCoT/: DimensionTypes.py  Event.py  __chat.py  __serverdestination.py  dest.py  detail.py  link.py  point.py  remarks.py
TAKfreeServer/: README.md  SQLcommands.py  __init__.py  ascii.py  constants.py  httpServer.py  liscense.txt  run.py  runModelTest.py  server.py
TAKfreeServer/Controllers/: ManageConnectionController.py  ManageRacacatPinController.py  ManageRadacatController.py  ManageRadacatMessageController.py  RequestCOTController.py  SendaGeoChatController.py  SendemergencyController.py  constant.py  deserializer.py  sendMedEvacController.py  serializer.py
TAKfreeServer/Model/: DimensionTypes.py  EntityTypes.py  Event.py  IdentityTypes.py  Mission.py  Precisionlocation.py  __chat.py  chat.py  (+16 more)
TAKlinux/: README.md
V0.8Alpha/: ActiveThreadsController.py  ClientInformationController.py  ClientInformationQueueController.py  ClientReceptionHandler.py  ClientSendHandeler.py  DataQueueController.py  MainSocketController.py  MesageTypeController.py  README.md  RecieveConnections.py  SendClientData.py  SendDataController.py  SendOtherController.py  XMLCoTController.py  basicModelInstantiate.py  orchestrator.py  recieveConnectionsProcessController.py  sumOtherShit.py
controllers/: ActiveThreadsController.py  AddDataToCoTList.py  BasicModelInstantiate.py  ClientInformationController.py  ClientReceptionHandler.py  CoTTypeController.py  CreateStartupFilesController.py  DataQueueController.py  JsonController.py  ReceiveConnectionsProcessController.py  SendClientData.py  ServerStatusController.py  certificate_generation.py  clientInterfaceController.py
model/: ATAK.eapx  ATAK.ldb  RawConnectionInformation.py
persistence/: user_persistence.txt
support/: FTSConfig.yaml  fatalexit  ftsrotate  start-fts.sh  supervisord.conf
test users/: api_service_test.py  common_testing_tools.py  http_service_test.py  https_service_test.py  ssl_service_test_cases.py  stdlib_extensions.py  tcp_service_test.py  test_base.py  test_cot_data.py  test_data.py
tests/: conftest.py
views/: CLI.py
windowsService/: ATAK.eapx  README.md  TAKFreeServer_running_as_service.py  beginProgramAsService.py  constants.py
(+2653 files in other folders)
