[tool.poetry]
name = "FreeTAKServer"
version = "0.2.34"
description = "An open source server for the TAK family of applications."
authors = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
readme = "README.md"
packages = [
    {include = "FreeTAKServer"}
    ]
include = ["FreeTAKServer/**/*.json", "FreeTAKServer/**/*.py", "FreeTAKServer/**/*.ini", "FreeTAKServer/**/*.conf"]

[tool.poetry.dependencies]
python = "^3.11"
bitarray="*"
click="8.0.4"
colorama="0.4.4"
cryptography="36.0.2"
bcrypt="3.1.7"
defusedxml="0.7.1"
dnspython="2.2.1"
eventlet="0.33.1"
Flask="1.1.2"
Flask-Cors="3.0.9"
Flask-HTTPAuth="4.2.0"
Flask-Login="0.5.0"
Flask-SocketIO="4.3.1"
Flask-SQLAlchemy="2.4.4"
geographiclib="1.52"
geopy="2.2.0"
greenlet="2.0.2"
itsdangerous="2.0.1"
testresources="2.0.1"
Jinja2="2.11.2"
lxml="*"
MarkupSafe="2.0.1"
monotonic="1.6"
pathlib2="2.3.7.post1"
protobuf="3.18.3"
psutil="5.9.4"
pykml="0.2.0"
python-engineio="3.13.2"
python-socketio="4.6.0"
PyYAML="6.0"
# ruamel.yaml="0.17.31"
six="1.16.0"
SQLAlchemy="1.3.20"
tabulate="0.8.7"
Werkzeug="2.0.3"
WTForms="2.3.3"
pyOpenSSL="22.0.0"
qrcode="7.3.1"
pillow="9.3.0"
asyncio="3.4.3"
xmltodict="*"
pyzmq="*"
digitalpy="0.3.13.6"
opentelemetry-sdk="*"
PyJWT="*"
FreeTAKServer_UI = {version = "*", optional = true}
pytak = {version = "5.4.1", optional = true}
pytest = {version = "7.2.0", optional = true}
pytest-asyncio = {version = "0.20.1", optional = true}

[tool.poetry.extras]
ui = ["FreeTAKServer_UI"]
dev = ["pytak", "pytest", "pytest-asyncio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
